# rust-bitcoin-proxy

./: .gitignore  Cargo.nix  Cargo.toml  LICENSE  README.md  flake.nix  justfile
apps/roxy-cli/: cli.rs  main.rs
apps/roxyd/: actions.rs  cli.rs  main.rs  rpc.rs
apps/roxyd/actions/: proxy.rs  test.rs
apps/roxyd/routes/: proxy.rs
config/: cert.pem  key.pem
lib/: error.rs
lib/rpc/: client.rs  types.rs
nix/: devshell.nix  rust.nix
scripts/: getblockchaininfo.sh  test-https.sh
src/: error.rs  http_client.rs  json_rpc.rs  json_rpc_client.rs  lib.rs
src/roxy-cli/: main.rs
src/roxyd/: cli.rs  main.rs
src/roxyd/actions/: proxy.rs
tests/: roxyd-rpc.rs
