[package]
authors = ["Edil Medeiros", "Eduardo Lemos"]
name = "roxy"
description = "Bitcoin node proxy and CLI in Rust"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "apps/roxyd/main.rs"
name = "roxyd"

[[bin]]
path = "apps/roxy-cli/main.rs"
name = "roxy-cli"

[lib]
name = "roxy"          
path = "lib/lib.rs"    
crate-type = ["lib"]

[dependencies]
actix-web = { version = "4.9.0", features = ["openssl"] }
clap = {version = "4.1.8", features = ["derive", "cargo"]}
env_logger = "0.10.0"
home = "=0.5.9"
native-tls = "0.2.14"
node = { package = "corepc-node", version = "0.4.0", features = ["28_0"] }
openssl = { version = "0.10" }
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = { version = "1.0.133", features = ["raw_value"] }
tokio = { version = "1.41.1", features = ["full"] }
which = "=4.2.5"

